# GdoScraper

./: .antigravityignore  .env.example  .gitignore  Dockerfile  README.md  conad_tests.py  coop_flyer.html  coop_test_parser.py  coop_tests.py  dashboard.py  directory_analysis.md  docker-compose.prod.yml  docker-compose.yml  main.py  prompt.md  pyproject.toml  refactoring_plan.md  run_interactive.py
.github/workflows/: ci.yml
core/: base_driver.py  base_pdf_driver.py  base_pdf_segmenter.py  models.py
dashboard/: index.css  index.html  index.js
db_engine/: database.py
docs/: architecture.md  cli_reference.md  dashboard_reference.md  generate.sh  installation.md  tui_reference.md
docs/api/: core.html  drivers.html  index.html  search.js  storage.html  utils.html
docs/api/core/: base_driver.html  base_pdf_driver.html  base_pdf_segmenter.html  models.html
docs/api/drivers/: conad.html  coop.html  dpiu.html  ins.html  manual.html
docs/api/drivers/conad/: conad_driver.html  offer_parser.html
docs/api/drivers/coop/: coop_driver.html
docs/api/drivers/manual/: manual_driver.html
docs/api/utils/: image_manager.html  logger.html
drivers/: coop_driver.py
drivers/conad/: __init__.py  conad_driver.py  layout_segmenter.py  offer_parser.py
drivers/coop/: __init__.py  coop_driver.py
drivers/dpiu/: __init__.py  dpiu_driver.py
drivers/ins/: __init__.py  ins_driver.py  ins_layout_segmenter.py  ins_offer_parser.py
drivers/manual/: __init__.py  manual_driver.py
storage/: database.py
tests/: test_pipeline.py
utils/: image_manager.py  logger.py
