[project]
name = "supermarket-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=2.6.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "pypdf>=6.12.1",
    "requests>=2.34.2",
    "pytesseract>=0.3.10",
    "anthropic>=0.105.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
skips = ["B101", "B104", "B105", "B106", "B110", "B311", "B324", "B404", "B603", "B605", "B606", "B607", "B608"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]


